# gama_tts_speech_dispatcher_module

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md
conf/: gama_tts.conf.pre  gnuspeech.conf  gnuspeech.conf.pre
src/: ModuleConfiguration.cpp  ModuleConfiguration.h  ModuleController.cpp  ModuleController.h  SynthesizerController.cpp  SynthesizerController.h  Util.cpp  Util.h  main.cpp
